--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField('String', 'BASE_URL', '"https://api.themoviedb.org/3/"')
+        buildConfigField('String', 'BASE_URL_IMAGE', '"https://image.tmdb.org/t/p/w500/"')
+        buildConfigField('String', 'API_KEY', '"ba41b51ae6616697b0651967f380815c"')
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -27,6 +31,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -62,8 +67,8 @@ dependencies {
     implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.6'
 
     //Dagger hilt
-    implementation "com.google.dagger:hilt-android:2.41"
-    kapt "com.google.dagger:hilt-compiler:2.41"
+    implementation "com.google.dagger:hilt-android:2.42"
+    kapt "com.google.dagger:hilt-compiler:2.42"
     implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
 
     //Lifecycle
@@ -100,6 +105,13 @@ dependencies {
 
     //pluto
     debugImplementation 'com.mocklets:pluto:1.1.3'
-    releaseImplementation'com.mocklets:pluto-no-op:1.0.1'
-    
+    releaseImplementation 'com.mocklets:pluto-no-op:1.0.1'
+
+    //SpinkKit
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+
+    //Paging
+    def paging_version = "3.1.1"
+    implementation "androidx.paging:paging-runtime:$paging_version"
+
 }
